refactor: restructure main layout and add favicon
Divided the main into logical sections for better clarity. Applied CSS Grid to control column widths precisely. Added a favicon for improved browser tab visibility.

--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Coder Caiman</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="assets/images/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous">
 </head>
 <body>
   <header>
-  <img src="assets/images/banner-caiman-coder.jpg" alt="Portfolio banner" class="banner-img" />
+  <img src="assets/images/banner-caiman-coder.jpg" alt="Portfolio banner" class="banner-img">
   </header>
 
   <section class="intro">
     <h1>CODERHOUSE WEB DEV Projects</h1>
-    <p></p>
   </section>
 
-  <main>
+  
 
+  <main>
+    <div class="part1main">
+      <div class="maintext">
+        <p>A collection of web development projects completed as part of the Coderhouse Front-End course.
+        This repository includes assignments and the final project, covering topics such as HTML, CSS, Bootstrap, SASS and SEO.
+        Each project is organized in its own folder and follows modern best practices for responsive and accessible web design.
+        </p>
+      </div>
+      <div class="projects">
+        <ul>
+          <li class="pre-submissions"><a href="pre-submission-1/index.html">Pre Submission 1</a></li>
+          <li class="pre-submissions"><a href="#"></a>Pre Submission 2</li>
+          <li class="pre-submissions"><a href="#"></a>Pre Submission 3</li>
+        </ul>
+      </div>
+    </div>
+    <div class="part2main">
+      
+    </div>
   </main>
 
   <footer>
