--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
 
   <section class="intro">
-    <h1>CODERHOUSE WEB DEV Projects</h1>
+    <h1>CODERHOUSE WEB DEV PROJECTS</h1>
   </section>
 
   
@@ -22,16 +22,16 @@
   <main>
     <div class="part1main">
       <div class="maintext">
-        <p>A collection of web development projects completed as part of the Coderhouse Front-End course.
-        This repository includes assignments and the final project, covering topics such as HTML, CSS, Bootstrap, SASS and SEO.
-        Each project is organized in its own folder and follows modern best practices for responsive and accessible web design.
+        <p>These are the pre-submission projects from the Coderhouse Front-End course.
+        Each one focuses on core concepts like HTML, CSS, responsive layout, Bootstrap, and SASS.
+        They're organized individually and reflect the fundamentals of modern web design.
         </p>
       </div>
       <div class="projects">
         <ul>
-          <li class="pre-submissions"><a href="pre-submission-1/index.html">Pre Submission 1</a></li>
-          <li class="pre-submissions"><a href="#"></a>Pre Submission 2</li>
-          <li class="pre-submissions"><a href="#"></a>Pre Submission 3</li>
+          <li class="pre-submissions"><a href="pre-submission-1/index.html"><img src="assets/images/pre-submission-1-thumb.png" alt="thumbnail for first pre submission"></a></li>
+          <li class="pre-submissions"><a href="#"></a><img src="assets/images/pre-submission-1-thumb.png" alt="thumbnail for second pre submission"></li>
+          <li class="pre-submissions"><a href="#"></a><img src="assets/images/pre-submission-1-thumb.png" alt="thumbnail for third pre submission"></li>
         </ul>
       </div>
     </div>
