refactor(landing): fix div nesting for spacing and clean redundant CSS
Corrected HTML structure to improve spacing between elements by nesting content consistently. Removed duplicated CSS by grouping shared styles across selectors.

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <h1>CODERHOUSE WEB DEV PROJECTS</h1>
   </section>
 
-  
 
   <main>
     <div class="part1main">
       <div class="maintext">
+        <h2>PRE SUBMISSIONS</h2>
         <p>These are the pre-submission projects from the Coderhouse Front-End course.
         Each one focuses on core concepts like HTML, CSS, responsive layout, Bootstrap, and SASS.
         They're organized individually and reflect the fundamentals of modern web design.
@@ -35,9 +35,16 @@
         </ul>
       </div>
     </div>
+    
     <div class="part2main">
-      <h2>FINAL PROJECT</h2>
-      
+      <div class="final-text">
+        <h2>FINAL PROJECT</h2>
+        <p>This is the final project from the Coderhouse Front-End course.
+        The result is a complete, fully responsive website that demonstrates both design and development skills.</p>
+      </div> 
+      <div class="thum-final">
+        <img src="assets/images/pre-submission-1-thumb.png" alt="thumbnail for first pre submission">
+      </div> 
     </div>
   </main>
 
