feat: apply custom responsive 16:9 iframe configuration in pre-submission 1
Ensured all embedded iframes maintain 16:9 aspect ratio and adapt fluidly across screen sizes using custom CSS.

--- a/pre-submission-1/videos.html
+++ b/pre-submission-1/videos.html
@@ -26,9 +26,21 @@
     <section>
       <h2>Sets de Techno</h2>
       <div class="videos">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/wHDGG7_dIdg?si=WdRdqrm0pmDadF6m" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/SUPeFDvxyp8?si=U6u-2PPvsRf62tXS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/LiKVApcn8YA?si=Rl99BFsi1oqsxFbb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="video-responsive">
+          <iframe src="https://www.youtube.com/embed/wHDGG7_dIdg?si=WdRdqrm0pmDadF6m" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="video-responsive">
+          <iframe src="https://www.youtube.com/embed/SUPeFDvxyp8?si=U6u-2PPvsRf62tXS" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="video-responsive">
+          <iframe src="https://www.youtube.com/embed/LiKVApcn8YA?si=Rl99BFsi1oqsxFbb" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div> 
       </div>
     </section>
   </main>
