feat(pre-submission-2): created header with GitHub link and image
Built the full header section including a title, subtitle, and an image linking to my GitHub profile. Added CSS rules to style the image for easier layout control.

--- a/pages/pre-submission-2/index.html
+++ b/pages/pre-submission-2/index.html
@@ -58,8 +58,16 @@
         </nav>
     </aside>
 
-    <header>
 
+    <header class="site-header">
+            <div class="header-text">
+                <h1>NO BOOTSTRAP WORLD</h1>
+                <p>A future where CSS rules and unnecessary classes are dead.</p>
+            </div>
+            <div class="header-img">
+                <a target="_blank" href="https://github.com/CaimanBrujo"><img class="profile-pic" src="https://avatars.githubusercontent.com/u/186770762?v=4" alt="profile picture">
+                </a>
+            </div>
     </header>
 
     <main>
