--- a/pages/pre-submission-2/index.html
+++ b/pages/pre-submission-2/index.html
@@ -66,7 +66,7 @@
             </div>
                 <div class="header-text">
                     <h1>NO BOOTSTRAP WORLD</h1>
-                    <p>A future where CSS rules and unnecessary classes are dead.</p>
+                    <p>A future where CSS rules.</p>
             </div>
         </header>
         <main>
