--- a/pages/pre-submission-2/pages/grid.html
+++ b/pages/pre-submission-2/pages/grid.html
@@ -11,6 +11,77 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="grid-container">
+        <aside>
+            <nav class="semantic-navbar">
+                <ul class="unordered-list">
+                    <li class="list-item-nav">
+                        <a class="nav-item-anchor" href="../index.html">
+                            <svg class="icon icon-big  nav-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z"/>
+                            </svg>
+                            <span class="nav-item-text nav-item-text-big">Home</span>
+                        </a>
+                    </li>
+                    <li class="list-item-nav dash-divider"></li>
+                    <li class="list-item-nav">
+                        <a class="nav-item-anchor" href="pure-css.html">
+                            <svg class="icon nav-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M5,3L4.35,6.34H17.94L17.5,8.5H3.92L3.26,11.83H16.85L16.09,15.64L10.61,17.45L5.86,15.64L6.19,14H2.85L2.06,18L9.91,21L18.96,18L20.16,11.97L20.4,10.76L21.94,3H5Z"/>
+                            </svg>
+                            <span class="nav-item-text">Pure CSS</span>
+                        </a>
+                    </li>
+                    <li class="list-item-nav">
+                        <a class="nav-item-anchor" href="flexbox.html">
+                            <svg class="icon nav-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M19,19V5H5V19H19M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5C3,3.89 3.9,3 5,3H19M17,11V13H7V11H17Z"/>
+                            </svg>
+                            <span class="nav-item-text">Flexbox</span>
+                        </a>
+                    </li>
+                    <li class="list-item-nav">
+                        <a class="nav-item-anchor" href="grid.html">
+                            <svg class="icon nav-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M10,4V8H14V4H10M16,4V8H20V4H16M16,10V14H20V10H16M16,16V20H20V16H16M14,20V16H10V20H14M8,20V16H4V20H8M8,14V10H4V14H8M8,8V4H4V8H8M10,14H14V10H10V14M4,2H20A2,2 0 0,1 22,4V20A2,2 0 0,1 20,22H4C2.92,22 2,21.1 2,20V4A2,2 0 0,1 4,2Z"/>
+                            </svg>
+                            <span class="nav-item-text">Grid</span>
+                        </a>
+                    </li>
+                    <li class="list-item-nav">
+                        <a class="nav-item-anchor" href="bootstrap.html">
+                            <svg class="icon nav-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M11.79 11.5H9.72V8.19H12.19C13.45 8.19 14.15 8.75 14.15 9.78C14.15 10.9 13.32 11.5 11.79 11.5M12.16 12.63H9.72V16.27L12.28 16.27C13.84 16.27 14.66 15.64 14.66 14.44S13.81 12.63 12.16 12.63M22 5.31V18.69C22 20.5 20.5 22 18.69 22H5.31C3.5 22 2 20.5 2 18.69V5.31C2 3.5 3.5 2 5.31 2H18.69C20.5 2 22 3.5 22 5.31M16 14.5C16 13.12 15.08 12.13 13.67 11.95V11.89C14.67 11.71 15.46 10.71 15.46 9.63C15.46 8.08 14.26 7.05 12.5 7.05H8.43V17.41H12.47C14.68 17.41 16 16.32 16 14.5Z"/>
+                            </svg>
+                            <span class="nav-item-text">Bootstrap</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </aside>
+        <header class="site-header">
+            <div class="header-img">
+                <a target="_blank" href="https://github.com/CaimanBrujo"><img class="profile-pic" src="https://avatars.githubusercontent.com/u/186770762?v=4" alt="profile picture">
+                </a>
+            </div>
+                <div class="header-text">
+                    <h1>NO BOOTSTRAP WORLD</h1>
+                    <p>A future where CSS rules.</p>
+            </div>
+        </header>
+        <main>
+            
+        </main>
+        <footer>
+            <a class="footer-anchor" target="_blank" href="https://github.com/CaimanBrujo?tab=repositories">
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <title>github</title>
+                    <path d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"/>
+                </svg>
+            </a>
+            <p class="footer-text">© 2025 @caimanbrujo — All bugs are intentional</p>
+        </footer>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
