feat(pre-submission-2): completed main section with responsive cards and hover effects
Styled article cards with borders and hover states, adjusted color variables, and extended media queries to ensure responsiveness on mobile.

--- a/pages/pre-submission-2/index.html
+++ b/pages/pre-submission-2/index.html
@@ -70,73 +70,77 @@
             </div>
         </header>
         <main>
-            <h2 class="reasons-title">Reasons to not use Bootstrap</h2>
-            <article class="reason-item">
-                <h3 class="reason-title">Lorem ipsum</h3>
-                <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
-                </p>
-                <div class="main-content-icons">
-                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"/>
-                    </svg>
+            <div class="main-landing-container">
+                <h2 class="reasons-title">Reasons to not use Bootstrap</h2>
+                <div class="reasons-grid">
+                    <article class="reason-item">
+                        <h3 class="reason-title">Lorem ipsum</h3>
+                        <p class="reasons-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
+                        </p>
+                        <div class="main-content-icons">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"/>
+                            </svg>
+                        </div>
+                    </article>
+                    <article class="reason-item">
+                        <h3 class="reason-title">Lorem ipsum</h3>
+                        <p class="reasons-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
+                        </p>
+                        <div class="main-content-icons">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"/>
+                            </svg>
+                        </div>
+                    </article>
+                    <article class="reason-item">
+                        <h3 class="reason-title">Lorem ipsum</h3>
+                        <p class="reasons-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
+                        </p>
+                        <div class="main-content-icons">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"/>
+                            </svg>
+                        </div>
+                    </article>
+                    <article class="reason-item">
+                        <h3 class="reason-title">Lorem ipsum</h3>
+                        <p class="reasons-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
+                        </p>
+                        <div class="main-content-icons">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"/>
+                            </svg>
+                        </div>
+                    </article>
+                    <article class="reason-item">
+                        <h3 class="reason-title">Lorem ipsum</h3>
+                        <p class="reasons-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
+                        </p>
+                        <div class="main-content-icons">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"/>
+                            </svg>
+                        </div>
+                    </article>
+                    <article class="reason-item">
+                        <h3 class="reason-title">Lorem ipsum</h3>
+                        <p class="reasons-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
+                        </p>
+                        <div class="main-content-icons">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                            <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"/>
+                            </svg>
+                        </div>
+                    </article>
                 </div>
-            </article>
-            <article class="reason-item">
-                <h3 class="reason-title">Lorem ipsum</h3>
-                <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
-                </p>
-                <div class="main-content-icons">
-                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"/>
-                    </svg>
-                </div>
-            </article>
-            <article class="reason-item">
-                <h3 class="reason-title">Lorem ipsum</h3>
-                <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
-                </p>
-                <div class="main-content-icons">
-                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"/>
-                    </svg>
-                </div>
-            </article>
-            <article class="reason-item">
-                <h3 class="reason-title">Lorem ipsum</h3>
-                <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
-                </p>
-                <div class="main-content-icons">
-                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"/>
-                    </svg>
-                </div>
-            </article>
-            <article class="reason-item">
-                <h3 class="reason-title">Lorem ipsum</h3>
-                <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
-                </p>
-                <div class="main-content-icons">
-                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"/>
-                    </svg>
-                </div>
-            </article>
-            <article class="reason-item">
-                <h3 class="reason-title">Lorem ipsum</h3>
-                <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
-                </p>
-                <div class="main-content-icons">
-                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path d="M12,15.39L8.24,17.66L9.23,13.38L5.91,10.5L10.29,10.13L12,6.09L13.71,10.13L18.09,10.5L14.77,13.38L15.76,17.66M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"/>
-                    </svg>
-                </div>
-            </article>
+            </div>
         </main>
         <footer>
             <a class="footer-anchor" target="_blank" href="https://github.com/CaimanBrujo?tab=repositories">
