--- a/pages/pre-submission-2/pages/pure-css.html
+++ b/pages/pre-submission-2/pages/pure-css.html
@@ -69,9 +69,45 @@
                     <p>A future where CSS rules.</p>
             </div>
         </header>
-        <main>
-            
+
+        <main class="pure-main">
+            <section class="intro">
+                <h2 class="pure-css-title">Why Choose Pure CSS?</h2>
+                <p class="pure-css-text">When you master CSS, you don’t need Bootstrap to build modern, responsive, and clean websites. Here’s why.</p>
+            </section>
+
+
+            <section class="demo-section">
+                <h3 class="pure-css-title"> Hover Magic Without JS</h3>
+                <div class="hover-box">Hover over me</div>
+                <p class="pure-css-text">This effect is made entirely with CSS transitions and transforms. No JavaScript. No frameworks.</p>
+            </section>
+
+            <section class="demo-section">
+                <h3 class="pure-css-title"> Responsive Layout Using Grid</h3>
+                <div class="grid-purecss-demo">
+                <div class="grid-purecss-item">Box 1</div>
+                <div class="grid-purecss-item">Box 2</div>
+                <div class="grid-purecss-item">Box 3</div>
+                </div>
+                <p class="pure-css-text">This layout adapts seamlessly to different screen sizes using only CSS Grid.</p>
+            </section>
+
+            <section class="demo-section">
+                <h3 class="pure-css-title"> Custom Styled Form</h3>
+                <form class="pure-form">
+                <label for="name">Name:</label>
+                <input required type="text" id="name" name="name" placeholder="Your name">
+
+                <label for="email">Email:</label>
+                <input required type="email" id="email" name="email" placeholder="your@email.com">
+
+                <button type="submit">Submit</button>
+                </form>
+                <p class="pure-css-text">This form uses custom styles without any external CSS library.</p>
+            </section>
         </main>
+
         <footer>
             <a class="footer-anchor" target="_blank" href="https://github.com/CaimanBrujo?tab=repositories">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
