feat(pre-submission-2): embedded responsive video in PURE CSS section using custom CSS snippet

--- a/pages/pre-submission-2/pages/pure-css.html
+++ b/pages/pre-submission-2/pages/pure-css.html
@@ -106,6 +106,12 @@
                 </form>
                 <p class="pure-css-text">This form uses custom styles without any external CSS library.</p>
             </section>
+
+            <div class="demo-section">
+                <iframe class="video-responsive" src="https://www.youtube.com/embed/Qhaz36TZG5Y?si=Do0MDGNg9Uz05SDT" title="YouTube video player" frameborder="0"Add commentMore actions
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </main>
 
         <footer>
