feat(pre-submission-2): added main content to Flexbox page using only Flexbox
Implemented the <main> section for the Flexbox page, reusing existing CSS classes and writing minimal new code to structure the layout exclusively with Flexbox.

--- a/pages/pre-submission-2/pages/flexbox.html
+++ b/pages/pre-submission-2/pages/flexbox.html
@@ -69,7 +69,40 @@
             </div>
         </header>
         <main>
-            
+            <section class="pure-main">
+                <h2 class="pure-css-title">Reasons Not to Use Bootstrap for Flexbox</h2>
+                <div class="flex-container-wrap">
+                    <article class="reason-item flex-item">
+                        <h3 class="reasons-title">You Speak CSS, Not Bootstrap</h3>
+                        <p class="reasons-text">Flexbox properties are readable and intuitive. Why write a cryptic class combo when <code>display: flex; justify-content: space-between;</code> is clear as day?</p>
+                    </article>
+
+                    <article class="reason-item  flex-item">
+                        <h3 class="reasons-title">Clean HTML > Class Soup</h3>
+                        <p class="reasons-text">Using Flexbox directly keeps your HTML clean and semantic. No need to nest endless <code>&lt;div class="row"&gt;</code> and <code>&lt;div class="col"&gt;</code>.</p>
+                    </article>
+
+                    <article class="reason-item  flex-item">
+                        <h3 class="reasons-title">You Know What’s Happening</h3>
+                        <p class="reasons-text">Using CSS directly gives you control. No magic classes doing things behind your back. You’re the boss here.</p>
+                    </article>
+
+                    <article class="reason-item flex-item">
+                        <h3 class="reasons-title">Responsiveness on Your Terms</h3>
+                        <p class="reasons-text">Media queries and Flexbox give you custom responsiveness. No <code>`.d-sm-none`</code> confusion. Just logic and control.</p>
+                    </article>
+
+                    <article class="reason-item flex-item">
+                        <h3 class="reasons-title">This Page Was Made Only Usind Flexbox</h3>
+                        <p class="reasons-text">Thanks to <code>flex-wrap: wrap;</code>, this layout adapts gracefully without relying on any external framework. Pure Flexbox power.</p>
+                    </article>
+
+                    <article class="reason-item flex-item">
+                        <h3 class="reasons-title">You’re Better Than That</h3>
+                        <p class="reasons-text">You know how to code. You don’t need training wheels. Flexbox is your playground now.</p>
+                    </article>
+                </div>
+            </section>
         </main>
         <footer>
             <a class="footer-anchor" target="_blank" href="https://github.com/CaimanBrujo?tab=repositories">
