chore(pre-submission-2): updated Pure CSS page video section and embedded CodePen demo
Refined the CSS for the responsive video and embedded a CodePen iframe showing the snippet that makes any iframe fully responsive.

--- a/pages/pre-submission-2/pages/pure-css.html
+++ b/pages/pre-submission-2/pages/pure-css.html
@@ -105,12 +105,22 @@
                 </form>
                 <p class="pure-css-text">This form uses custom styles without any external CSS library.</p>
             </section>
-
-            <div class="demo-section">
+            <section class="demo-section">
+                <h2 class="pure-css-title">Fully Responsive Video Example</h2>
+                <p class="pure-css-text">No CSS Classes were harmed in this example.</p>
                 <iframe class="video-responsive" src="https://www.youtube.com/embed/Qhaz36TZG5Y?si=Do0MDGNg9Uz05SDT" title="YouTube video player" frameborder="0"Add commentMore actions
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
+            </section>
+            <section class="demo-section">
+                <h2 class="pure-css-title">Responsive <code>&lt;iframe&gt;</code> Snippet</h2>
+                <p class="pure-css-text">You can make your videos (or any <code>&lt;iframe&gt;</code>) fully responsive with this simple snippet. No frameworks, no hacks — just clean CSS.</p>
+
+                <iframe class="video-responsive" scrolling="no" title="ZYGXZKo"
+                src="https://codepen.io/CaimanBrujo/embed/preview/ZYGXZKo?default-tab=html%2Cresult"
+                frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                </iframe>
+            </section>
         </main>
 
         <footer>
