feat(pre-submission-2): added grid page main with embedded layout demo
Reused existing CSS classes to structure and style the Grid page's main section. Included a responsive layout example via embedded CodePen using CSS Grid with named areas.

--- a/pages/pre-submission-2/pages/grid.html
+++ b/pages/pre-submission-2/pages/grid.html
@@ -68,9 +68,68 @@
                     <p>A future where CSS rules.</p>
             </div>
         </header>
-        <main>
-            
+        <main class="pure-main">
+            <section class="pure-css-title">
+                <h1 class="pure-css-title">Goodbye Bootstrap, Hello CSS Grid</h1>
+                <p class="pure-css-text">
+                If you're still relying on Bootstrap in 2025... well, let's talk. Here's why you should ditch it and embrace native Grid layout instead.
+                </p>
+            </section>
+
+            <section class="reasons-grid">
+                <article class="reason-item">
+                <h3 class="reasons-title">Built-in Power</h3>
+                <p class="reasons-text">
+                    CSS Grid is natively supported in all modern browsers. No extra libraries, no bloat – just pure layout control.
+                </p>
+                </article>
+
+                <article class="reason-item">
+                <h3 class="reasons-title">Clean HTML</h3>
+                <p class="reasons-text">
+                    No more <code>&lt;div class="container row col-6"&gt;</code> nightmares. Grid keeps your markup semantic and clean.
+                </p>
+                </article>
+
+                <article class="reason-item">
+                <h3 class="reasons-title">Customization Freedom</h3>
+                <p class="reasons-text">
+                    You don’t fight the framework – you design what you want, how you want, with full control.
+                </p>
+                </article>
+
+                <article class="reason-item">
+                <h3 class="reasons-title">Less Overhead</h3>
+                <p class="reasons-text">
+                    Bootstrap brings a truckload of unused CSS. Grid is native – faster load times, better performance.
+                </p>
+                </article>
+
+                <article class="reason-item">
+                <h3 class="reasons-title">Logical Layouts</h3>
+                <p class="reasons-text">
+                    With <code>grid-template-areas</code>, your layout is human-readable and easy to debug or refactor.
+                </p>
+                </article>
+
+                <article class="reason-item">
+                <h3 class="reasons-title">You're Already Using It</h3>
+                <p class="reasons-text">
+                    If you're here, you're writing Grid already. Just go all-in – you won't miss Bootstrap.
+                </p>
+                </article>
+            </section>
+
+            <section class="demo-section">
+                <h2 class="pure-css-title">Example: Full Page Layout with Grid</h2>
+                <p class="pure-css-text">Below is a live Codepen showing how easy it is to build a full page layout with grid areas. A similar grid is used in this web</p>
+                <iframe class="video-responsive" scrolling="no" title="Grid Layout Demo"
+                src="https://codepen.io/CaimanBrujo/embed/preview/wBaPwRQ?default-tab=html%2Cresult"
+                frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                </iframe>
+            </section>
         </main>
+
         <footer>
             <a class="footer-anchor" target="_blank" href="https://github.com/CaimanBrujo?tab=repositories">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
