feat(pre-submission-2): completed Bootstrap page main section without writing any CSS
Used only Bootstrap utility classes and components to build a responsive and ironic main section listing cases where using Bootstrap might make sense (kind of).

--- a/pages/pre-submission-2/pages/bootstrap.html
+++ b/pages/pre-submission-2/pages/bootstrap.html
@@ -68,9 +68,71 @@
                     <p>A future where CSS rules.</p>
             </div>
         </header>
-        <main>
-            
+        <main class="container my-6">
+            <h1 class="text-center mb-4">When You <em>*Should*</em> Use Bootstrap</h1>
+            <p class="text-center mb-5">A friendly reminder that Bootstrap is here to save you from writing actual CSS (but at what cost?).</p>
+
+            <div class="row g-4">
+                <div class="col-md-6">
+                <div class="card border-warning h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">You want to ship fast, but not care how it looks</h5>
+                        <p class="card-text">Bootstrap lets you throw a navbar, jumbotron, and footer together in 10 minutes. Design? A problem for Future You.</p>
+                        <a href="#" class="btn btn-outline-warning mt-3">Generate Jumbotron</a>
+                    </div>
+                </div>
+                </div>
+
+                <div class="col-md-6">
+                <div class="card border-danger h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">You're okay looking like 90% of the web</h5>
+                        <p class="card-text">Originality is overrated, right? Bootstrap’s default styles will make sure your site fits right in... with everyone else's.</p>
+                    </div>
+                </div>
+                </div>
+
+                <div class="col-md-6">
+                <div class="card border-info h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">You love adding 200kb of CSS for 2 buttons</h5>
+                        <p class="card-text">Why write 10 lines of CSS when you can load an entire framework for a couple of rounded corners and a hover effect?</p>
+                        <a href="#" class="btn btn-outline-info mt-3">Download Spinner</a>
+                    </div>
+                </div>
+                </div>
+
+                <div class="col-md-6">
+                <div class="card border-success h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">You just started learning web dev yesterday</h5>
+                        <p class="card-text">And you already deployed something with a modal, navbar, and accordion. Bootstrap makes it *feel* like you're a dev.</p>
+                    </div>
+                </div>
+                </div>
+
+                <div class="col-md-6">
+                <div class="card border-primary h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">You want to avoid thinking about layout</h5>
+                        <p class="card-text">Why deal with Grid or Flexbox when you can just slap on <code>.row</code> and <code>.col</code> and hope it works?</p>
+                    </div>
+                </div>
+                </div>
+
+                <div class="col-md-6">
+                <div class="card border-secondary h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">You miss the golden days of 2015 web design</h5>
+                        <p class="card-text">Who needs modern design systems when you can have shadows, gradients, and buttons that scream “I was built with Bootstrap 3”?</p>
+                        <a href="#" class="btn btn-sm btn-dark mt-3">Add Some Panels</a>
+                    </div>
+                </div>
+                </div>
+            </div>
         </main>
+
+
         <footer>
             <a class="footer-anchor" target="_blank" href="https://github.com/CaimanBrujo?tab=repositories">
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
